v3.9.8
-----
: Updated French translation
+ Added Italian translation

v3.9.7
-----
: Fixes bug with market page not highlighting beyond the first
: Fixes bug with bundle pages not highlighting if game price is "Free" or blank
: Fixes a bug where tags were overlapping prices in some instances
: Fixes a bug where discount percentages were not displaying correctly on wishlists
+ Adds a link to a games dedicated DLC page from that game's app page
+ Adds highlighting to a game's DLC page

v3.9.6
-----
: More profile updates.  This expands to includes users without custom urls

v3.9.5
-----
: Updated www.Enhancedsteam.com API to authenticate database updates via Steam OpenID

v3.9.4
-----
: Updated Spanish translation
+ Added Czech translation
: Fixed a bug in the German store where all games showed Tages DRM

v3.9.3
-----
+ Added highlighting (but not tagging) to Summer Sale 2013 homepage
+ More optimized DOM change notifications in AJAX calls

v3.9.2
-----
: Fixed a bug where total spent wasn't showing if wallet balance was 0

v3.9.1
-----
: Fixed a bug with EU2 prices showing incorrectly
: Fixed a bug with purchase date detection

v3.9
-----
+ Added ability to hide games you already own
+ Added wallet balance in the header of community pages to match store pages UI
+ Seperated total spent into store, game, and market transactions

v3.8.1
-----
: Fixed a bug in pricing history currency localization - thanks directhex!
: Updated Russian translation

v3.8
-----
: Fixed a bug where bundle savings weren't calculating correctly in some currencies.  Thanks zr40!
: Updated Russian translation
+ Using new api.enhancedsteam.com web calls for external data, which is faster and more secure
+ Added a "Total size of all games" to your "All Games" tab.
+ Added search links to all app page categories which link to other games in the same category

v3.7
-----
: Changed "Total Spent" text to regular color (not red)