@@ -622,7 +622,7 @@
 					<div class="text">Spanish:</div>
 				</td>
 				<td>
-					<div class="text">Jason Shackles</div>
+					<div class="text">sharkiller</div>
 				</td>
 			</tr>
 			<tr>
@@ -689,6 +689,17 @@
 				</td>
 				<td>
 					<div class="text">Andrea Brandi</div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					&nbsp;&nbsp;
+				</td>
+				<td height=30>
+					<div class="text">Portuguese:</div>
+				</td>
+				<td>
+					<div class="text">Johnywalves</div>
 				</td>
 			</tr>
 		
